test: include basic tests